refactor: BookController